--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,4 +1,21 @@
 /* You can add global styles to this file, and also import other style files */
 
-html, body { height: 100%; }
-body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+html,
+body {
+    height: 100%;
+}
+
+body {
+    height : 100%;
+    background-color: #151515;
+    font-family: Roboto, "Helvetica Neue", sans-serif;
+    padding-top: 60px;
+}
+
+
+body * {
+    font-family: Roboto, "Helvetica Neue", sans-serif;
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
