--- a/src/styles.scss
+++ b/src/styles.scss
@@ -9,6 +9,7 @@ body {
     height : 100%;
     background-color: #151515;
     font-family: Roboto, "Helvetica Neue", sans-serif;
+    color:aliceblue;
     padding-top: 60px;
 }
 
