--- a/src/app/components/home/home.component.scss
+++ b/src/app/components/home/home.component.scss
@@ -90,7 +90,7 @@
         display: flex;
     }
     &-platform {
-        // min-width: 100%;
+        width: 20px;
         margin-right: 10px;
     }
 }
