--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -14,38 +14,36 @@
 
         </mat-select>
     </mat-form-field>
+</div>
+<div class="games">
+    <ng-container *ngFor="let game of games"> 
+        <div class="game" (click)="openGameDetails(game.id)">
+            <div class="game-thumb-container">
+                <img 
+                *ngIf="game.background_image"
+                    class="game-thumbnail"
+                    src= "{{game.background_image}}"
+                    alt="thumbnail"
+                />
+                *ngIf="!game.background_image"
+                    class="game-thumbnail"
+                    src= "https://via.placeholder.com/160"
+                    alt="thumbnail"
+            </div>
 
-    <div class="games">
-        <ng-container *ngFor="let game of games"> 
-            <div class="game">
-                <div class="game-thumb-container">
-                    <img 
-                    *ngIf="game.background_image"
-                        class="game-thumbnail"
-                        src= "{{game.background_image}}"
-                        alt="thumbnail"
-                    />
-                    *ngIf="!game.background_image"
-                        class="game-thumbnail"
-                        src= "https://via.placeholder.com/160"
-                        alt="thumbnail"
-                </div>
-    
-                <div class="game-description">
-                    <p class="game-name">
-                       {{game.name}} 
-                    </p>
-                    <div class="game-platforms">
-                        <img
-                            *ngFor="let platform of game.parent_platforms"
-                            class="game-platform"
-                            src="assets/images/platforms/{{platform.platform.slug}}.svg"
-                            alt="slug"     
-                        /> 
-                    </div>
+            <div class="game-description">
+                <p class="game-name">
+                    {{game.name}} 
+                </p>
+                <div class="game-platforms">
+                    <img
+                        *ngFor="let platform of game.parent_platforms"
+                        class="game-platform"
+                        src="assets/images/platforms/{{platform.platform.slug}}.svg"
+                        alt="slug"     
+                    /> 
                 </div>
             </div>
-        </ng-container>
-        
-    </div>
+        </div>
+    </ng-container>
 </div>
