first version is completed

--- a/src/app/components/details/details.component.html
+++ b/src/app/components/details/details.component.html
@@ -34,7 +34,7 @@
         </div>
       </div>
 
-      <!-- <app-game-tabs [game]="game"></app-game-tabs> -->
+      <app-game-tabs [game]="game"></app-game-tabs>
     </div>
   </div>
 </div>
