--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -25,10 +25,11 @@
                     src= "{{game.background_image}}"
                     alt="thumbnail"
                 />
+                <img
                 *ngIf="!game.background_image"
                     class="game-thumbnail"
-                    src= "https://via.placeholder.com/160"
-                    alt="thumbnail"
+                    src= "https://image.shutterstock.com/image-vector/no-image-vector-symbol-missing-260nw-1310632172.jpg"
+                    alt="thumbnail"/>
             </div>
 
             <div class="game-description">
