--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -28,7 +28,7 @@
                 <img
                 *ngIf="!game.background_image"
                     class="game-thumbnail"
-                    src= "https://image.shutterstock.com/image-vector/no-image-vector-symbol-missing-260nw-1310632172.jpg"
+                    src= "{{environ.PLACEHOLDER_URL}}"
                     alt="thumbnail"/>
             </div>
 
