--- a/src/app/components/search-bar/search-bar.component.scss
+++ b/src/app/components/search-bar/search-bar.component.scss
@@ -60,3 +60,13 @@
     cursor: pointer;
     text-decoration: none;
 }
+
+.filter {
+        padding: 10px;
+        margin-top:5px;
+        border : none;
+        border-radius: 0.5rem;
+        outline: none;
+        color: white;
+        // background-color: #3f51b5;
+}
